--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario de Productos</title>
 </head>
+
 <body>
 
     <form id="formularioProductos">
@@ -37,9 +39,11 @@
             <input type="text" id="url" required>
         </div>
         <button type="button" id="botonAgregar">Agregar Producto</button>
+        <button type="button" id="botonActualizar">Actualizar Producto</button>
     </form>
 
     <!-- Incluir tu script JS aquí -->
     <script src="js/index.js"></script>
 </body>
+
 </html>
