--- a/html/altaDeUsuario.html
+++ b/html/altaDeUsuario.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/a7f4659b4f.js" crossorigin="anonymous"></script>
     <title>Alta de usuario</title>
 </head>
 <body>
     <main>
         <section>
             <h1>Prueba de Alta de usuario</h1>
-            <tabla id="tablaAlta">
+            <table>
                 <thead>
                     <th>Nombre</th>
                     <th>Estado</th>
                     <th>Opciones</th>
                 </thead>
                 <tbody id="bodyAlta">
-
                 </tbody>
-            </tabla>
+            </table>
         </section>
     </main>
 
