--- a/index.html
+++ b/index.html
@@ -14,35 +14,36 @@
 
 <body>
     <main>
-        <section>
+        <section class="m-3">
             <h1>Administrar Productos</h1>
             <!-- Botones para mostrar modales -->
             <button type="button" class="btn btn-primary" data-bs-target="#miModal"
                 onclick="mostrarModal('Nuevo Producto', null)">Nuevo Producto</button>
 
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th scope="col">Código</th>
-                        <th scope="col">Nombre</th>
-                        <th scope="col">Categoría</th>
-                        <th scope="col">Descripción</th>
-                        <th scope="col">Publicado</th>
-                        <th scope="col">Opciones</th>
-                    </tr>
-                </thead>
-                <tbody id="tbody">
+            <div class="table-responsive">
+                <table class="table m-2 align-middle text-center">
+                    <thead>
+                        <tr>
+                            <th scope="col">Código</th>
+                            <th scope="col">Nombre</th>
+                            <th scope="col">Categoría</th>
+                            <th scope="col">Descripción</th>
+                            <th scope="col">Publicado</th>
+                            <th scope="col" colspan="3">Opciones</th>
+                        </tr>
+                    </thead>
+                    <tbody class="table-group-divider" id="tbody">
 
-                </tbody>
-            </table>
-
+                    </tbody>
+                </table>
+            </div>
             <!-- Modal -->
             <div class="modal fade" id="miModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
                 aria-labelledby="staticBackdropLabel" aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="staticBackdropLabel" class="modalTitulo"></h1>
+                            <h1 class="modal-title fs-5 modalTitulo" id="staticBackdropLabel"></h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
@@ -90,11 +91,11 @@
     </main>
 
     <!-- Script JS -->
-    <script src="js/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/a7f4659b4f.js" crossorigin="anonymous"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
