--- a/index.html
+++ b/index.html
@@ -10,35 +10,43 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 
 <body>
     <main>
-        <section class="m-3">
-            <h1>Administrar Productos</h1>
-            <!-- Botones para mostrar modales -->
-            <button type="button" class="btn btn-primary" data-bs-target="#miModal"
-                onclick="mostrarModal('Nuevo Producto', null)">Nuevo Producto</button>
+        <section class="m-2 p-3">
+            <div class="container m-2">
+                <div class="row d-flex align-items-center">
+                    <div class="col-sm-8 col-md-9 text-left">
+                        <h1>Administrar Productos</h1>
+                    </div>
+                    <div class="col-sm-4 col-md-3 text-sm-left text-center">
+                        <button type="button" class="btn btn-primary" data-bs-target="#miModal" onclick="mostrarModal('Nuevo Producto', null)">Nuevo Producto</button>
+                    </div>
+                </div>
+            </div>
 
             <div class="table-responsive">
-                <table class="table m-2 align-middle text-center">
-                    <thead>
+                <table class="table-light align-middle text-center text-white">
+                    <thead class="text-white-50">
                         <tr>
-                            <th scope="col">Código</th>
-                            <th scope="col">Nombre</th>
-                            <th scope="col">Categoría</th>
-                            <th scope="col">Descripción</th>
-                            <th scope="col">Publicado</th>
-                            <th scope="col" colspan="3">Opciones</th>
+                            <th scope="col" class="col-1 p-2">Código</th>
+                            <th scope="col" class="col-1 p-2">Nombre</th>
+                            <th scope="col" class="col-1 p-2">Categoría</th>
+                            <th scope="col" class="col-4 p-2">Descripción</th>
+                            <th scope="col" class="col-1 p-2">Publicado</th>
+                            <th scope="col" colspan="3" class="col-1 p-2">Opciones</th>
                         </tr>
                     </thead>
-                    <tbody class="table-group-divider" id="tbody">
-
+                    <tbody class="table-group-divider text-white" id="tbody">
+            
                     </tbody>
                 </table>
             </div>
+            
             <!-- Modal -->
-            <div class="modal fade" id="miModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+            <div class="modal fade text-black" id="miModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
                 aria-labelledby="staticBackdropLabel" aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
@@ -95,7 +103,7 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/a7f4659b4f.js" crossorigin="anonymous"></script>
-    <script src="js/index.js"></script>
+    <script src="js/administracion.js"></script>
 </body>
 
 </html>
