--- a/html/altaDeUsuario.html
+++ b/html/altaDeUsuario.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/estilo.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/a7f4659b4f.js" crossorigin="anonymous"></script>
     <title>Alta de usuario</title>
 </head>
@@ -10,7 +12,7 @@
     <main>
         <section>
             <h1>Prueba de Alta de usuario</h1>
-            <table>
+            <table class="table table-striped table-hover table-bordered text-center">
                 <thead>
                     <th>Nombre</th>
                     <th>Estado</th>
@@ -22,6 +24,7 @@
         </section>
     </main>
 
+    
     <script type="module" src="../js/altaDeUsuario.js"></script>
 </body>
 </html>
