--- a/html/altaDeUsuario.html
+++ b/html/altaDeUsuario.html
@@ -12,7 +12,7 @@
     <main>
         <section>
             <h1>Prueba de Alta de usuario</h1>
-            <table class="table table-striped table-hover table-bordered text-center">
+            <table class="table table-responsive text-center">
                 <thead>
                     <th>Nombre</th>
                     <th>Estado</th>
