--- a/index.html
+++ b/index.html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
+    <title>navbar Dos</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <header></header>
+    <header class="header">
+        <div class="logo">
+            <img src="./imgTemporal/PochlooLOGO.png" alt="Logo de la marca">
+        </div>
+        <nav>
+           <ul class="nav-links">
+                <li><a href="#">Ingresa</a></li>
+           </ul>            
+        </nav>
+        <a class="btn" href="#"><button>Suscribete ahora</button></a>
+    </header>
+
     <main>
-        <p>prueba de commit</p>
+
     </main>
-    
-    <footer></footer>
+
+
+    <footer>
+        
+    </footer>
+
 </body>
 </html>
