--- a/pages/login.html
+++ b/pages/login.html
@@ -4,29 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pocchlo Movies</title>
+    <title>Iniciar Sesion</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
     <header class="header">
         <div class="logo">
-            <img src="./imgTemporal/PochlooLOGO.png" alt="Logo de la marca">
+            <img src="../imgTemporal/PochlooLOGO.png" alt="Logo de la marca">
         </div>
         <nav>
            <ul class="nav-links">
-                <li><a href="pages/login.html" target="_blank">Ingresa</a></li>
+                <li><a href="./login.html">Ingresa</a></li>
            </ul>            
         </nav>
-        <a class="btn" href="pages/registro.html" target="_blank"><button>Suscribete ahora</button></a>
+        <a class="btn" href="./registro.html"><button>Suscribete ahora</button></a>
     </header>
 
     <main>
-        <h1>Inicio</h1>
+        <h1>Iniciar sesion</h1>
     </main>
 
 
     <footer>
-
+        
     </footer>
 
 </body>
