--- a/html/Administracion.html
+++ b/html/Administracion.html
@@ -6,13 +6,14 @@
     <link rel="stylesheet" href="../css/estilo.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/a7f4659b4f.js" crossorigin="anonymous"></script>
+    
     <title>Alta de usuario</title>
 </head>
 <body>
     <main>
         <section>
-            <h1>Prueba de Alta de usuario</h1>
-            <table class="table table-responsive text-center">
+            <h3 class="text-center m-3 p-2">Usuarios</h3>
+            <table class="table-light table table-responsive  text-center tablaUsuarios">
                 <thead>
                     <th>Nombre</th>
                     <th>Estado</th>
@@ -26,5 +27,8 @@
 
     
     <script type="module" src="../js/altaDeUsuario.js"></script>
+    <script src="
+https://cdn.jsdelivr.net/npm/sweetalert2@11.10.3/dist/sweetalert2.all.min.js
+"></script>
 </body>
 </html>
