--- a/Html/registro.html
+++ b/Html/registro.html
@@ -14,7 +14,7 @@
 
     <div class="containerRegistro">
         <div class="subcontainerRegistro">
-            <form>
+            <form id="formularioDeRegistro">
                 <div class="mb-3">
                     <label for="nombre" class="form-label">Nombre</label>
                     <input type="text" class="form-control" id="nombre" pattern="[A-Za-zÁ-ú ]{1,20}" required aria-describedby="nombreHelp">
@@ -44,6 +44,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../Js/registro.js"></script>
 </body>
 </html>
