--- a/Html/registro.html
+++ b/Html/registro.html
@@ -45,6 +45,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="../Js/registro.js"></script>
+    <script src="../Js/registro.js" type="module"></script>
 </body>
 </html>
