Cambio de nombre de funciones + reorganización de los objetos de registro

--- a/html/Administracion.html
+++ b/html/Administracion.html
@@ -13,9 +13,9 @@
     <main>
         <section>
             <h3 class="text-center m-3 p-2">Usuarios</h3>
-            <table class="table-light table table-responsive  text-center tablaUsuarios">
+            <table class="table-light table table-responsive text-center tablaUsuarios">
                 <thead>
-                    <th>Nombre</th>
+                    <th>Usuario</th>
                     <th>Estado</th>
                     <th>Opciones</th>
                 </thead>
