--- a/html/Administracion.html
+++ b/html/Administracion.html
@@ -12,14 +12,15 @@
 <body>
     <main>
         <section>
-            <h3 class="text-center m-3 p-2">Usuarios</h3>
+            <h3 class="text-center me-0 p-2">Usuarios</h3>
             <table class="table-light table table-responsive text-center tablaUsuarios">
                 <thead>
                     <th>Usuario</th>
+                    <th>Email</th>
                     <th>Estado</th>
                     <th>Opciones</th>
                 </thead>
-                <tbody id="bodyAlta">
+                <tbody id="bodyAlta" class="justify-content-center">
                 </tbody>
             </table>
         </section>
