--- a/Html/login.html
+++ b/Html/login.html
@@ -25,17 +25,16 @@
               <h1 class="text-center my-3"> Logueate y empieza a disfrutar de tus <br> películas y series favoritas</h1>
             </div>
             <div>
-              <label for="exampleFormControlInput1" class="form-label">Email</label>
-              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="mail@ejemplo.com"
-                required>
+              <label for="inputEmail" class="form-label">Email</label>
+              <input type="email" class="form-control" id="inputEmail" placeholder="mail@ejemplo.com" required>
             </div>
             <div>
-              <label for="exampleFormControlInput2" class="form-label">Contraseña</label>
-              <input type="password" class="form-control" id="exampleFormControlInput2" placeholder="********"
-                minlength="8" maxlength="10" required>
+              <label for="inputPassword" class="form-label">Contraseña</label>
+              <input type="password" class="form-control" id="inputPassword" placeholder="********" minlength="8"
+                maxlength="10" required>
             </div>
             <div class="botonLogeo">
-              <input class="btn btn-primary" type="submit" value="Logearse">
+              <button class="btn btn-primary" type="button" onclick="iniciarSesionPochloo()">Logearse</button>
             </div>
           </div>
         </div>
@@ -70,6 +69,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="../Js/login.js"></script>
 
 </body>
 
