--- a/html/filtroDeBusqueda.html
+++ b/html/filtroDeBusqueda.html
@@ -15,19 +15,25 @@
               Categorías
             </button>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Acción</a></li>
-              <li><a class="dropdown-item" href="#">Animado</a></li>
-              <li><a class="dropdown-item" href="#">Bélico</a></li>
-              <li><a class="dropdown-item" href="#">Comedia</a></li>
-              <li><a class="dropdown-item" href="#">Documental</a></li>
-              <li><a class="dropdown-item" href="#">Musical</a></li>
-              <li><a class="dropdown-item" href="#">Drama</a></li>
-              <li><a class="dropdown-item" href="#">Terror</a></li>
-              
+              <li><a class="dropdown-item" href="categoria.html">Acción</a></li>
+              <li><a class="dropdown-item" href="categoria.html">Animado</a></li>
+              <li><a class="dropdown-item" href="categoria.html">Aventura</a></li>
+              <li><a class="dropdown-item" href="categoria.html">Bélico</a></li>
+              <li><a class="dropdown-item" href="categoria.html">Comedia</a></li>
+              <li><a class="dropdown-item" href="categoria.html">Documental</a></li>
+              <li><a class="dropdown-item" href="categoria.html">Drama</a></li>
+              <li><a class="dropdown-item" href="categoria.html">Musical</a></li>
+              <li><a class="dropdown-item" href="categoria.html">Misterio</a></li>
+              <li><a class="dropdown-item" href="categoria.html">Terror</a></li>
             </ul>
           </div>
+          <section id="peliculasPorCategoria">
+
+          </section>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="../js/filtroDeBusqueda.js"></script>
+    <script src="../js/exportPeliculas.js"></script>
 </body>
 </html>
