--- a/html/administracion.html
+++ b/html/administracion.html
@@ -10,24 +10,22 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="../css/estilo.css">
 </head>
 
 <body>
     <main>
-        <section class="m-2 p-3">
-            <div class="container m-2">
-                <div class="row d-flex align-items-center">
-                    <div class="col-sm-8 col-md-9 text-left">
-                        <h1>Administrar Productos</h1>
-                    </div>
-                    <div class="col-sm-4 col-md-3 text-sm-left text-center">
-                        <button type="button" class="btn btn-primary" data-bs-target="#miModal" onclick="mostrarModal('Nuevo Producto', null)">Nuevo Producto</button>
-                    </div>
+        <section class="m-2 p-2">
+            <div class="container mt-2 mb-2">
+                <div class="d-md-flex justify-content-between align-items-center">
+                    <h1>Administrar Productos</h1>
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#miModal"
+                            onclick="mostrarModal('Nuevo Producto', null)">Nuevo +
+                    </button>
                 </div>
             </div>
 
-            <div class="table-responsive">
+            <div class="table-responsive mt-3">
                 <table class="table-light align-middle text-center text-white">
                     <thead class="text-white-50">
                         <tr>
@@ -39,15 +37,15 @@
                             <th scope="col" colspan="3" class="col-1 p-2">Opciones</th>
                         </tr>
                     </thead>
-                    <tbody class="table-group-divider text-white" id="tbody">
-            
+                    <tbody class="text-white table-group-divider" id="tbody">
+
                     </tbody>
                 </table>
             </div>
-            
+
             <!-- Modal -->
-            <div class="modal fade text-black" id="miModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-                aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal fade text-black" id="miModal" data-bs-backdrop="static" data-bs-keyboard="false"
+                tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
@@ -59,31 +57,36 @@
                                 <input type="hidden" id="codigo" name="codigo">
                                 <div class="mb-3">
                                     <label for="nombre" class="form-label">Nombre</label>
-                                    <input type="text" class="form-control" id="nombre" required>
+                                    <input type="text" class="form-control" id="nombre" name="nombre" minlength="2"
+                                        maxlength="50" required>
                                 </div>
                                 <div class="mb-3">
                                     <label for="categoria" class="form-label">Categoría</label>
-                                    <input type="text" class="form-control" id="categoria" required>
+                                    <input type="text" class="form-control" id="categoria" name="categoria"
+                                        minlength="2" maxlength="50" required>
                                 </div>
                                 <div class="mb-3">
                                     <label for="descripcion" class="form-label">Descripción</label>
-                                    <textarea id="descripcion" class="form-control" required></textarea>
+                                    <textarea id="descripcion" class="form-control" name="descripcion" minlength="2"
+                                        maxlength="200" required></textarea>
                                 </div>
                                 <div class="mb-3 form-check">
                                     <label class="form-check-label" for="publicado">Publicado</label>
-                                    <input type="checkbox" class="form-check-input" id="publicado">
+                                    <input type="checkbox" class="form-check-input" id="publicado" name="publicado">
                                 </div>
                                 <div class="mb-3 form-check">
                                     <label class="form-check-label" for="destacado">Destacado</label>
-                                    <input type="checkbox" class="form-check-input" id="destacado">
+                                    <input type="checkbox" class="form-check-input" id="destacado" name="destacado">
                                 </div>
                                 <div class="mb-3">
                                     <label for="imagen" class="form-label">Imagen URL</label>
-                                    <input type="text" class="form-control" id="imagen" required>
+                                    <input type="text" class="form-control" id="imagen" name="imagen" minlength="2"
+                                        maxlength="200" required>
                                 </div>
                                 <div class="mb-3">
                                     <label for="url" class="form-label">URL</label>
-                                    <input type="text" class="form-control" id="url" required>
+                                    <input type="text" class="form-control" id="url" name="url" minlength="2"
+                                        maxlength="200" required>
                                 </div>
                             </form>
                         </div>
@@ -103,7 +106,7 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/a7f4659b4f.js" crossorigin="anonymous"></script>
-    <script src="js/administracion.js"></script>
+    <script src="../js/administracion.js"></script>
 </body>
 
 </html>
