--- a/html/administracion.html
+++ b/html/administracion.html
@@ -7,10 +7,12 @@
     <meta name="description" content="Sitio web de streaming de peliculas y series">
     <meta name="author" content="Grupo Pochloo">
     <title>Pochloo</title>
-    <!-- Bootstrap -->
+    <!-- Estilos -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
     <link rel="stylesheet" href="../css/estilo.css">
+    <script src="https://kit.fontawesome.com/a7f4659b4f.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -18,9 +20,9 @@
         <section class="m-2 p-2">
             <div class="container mt-2 mb-2">
                 <div class="d-md-flex justify-content-between align-items-center">
-                    <h1>Administrar Productos</h1>
+                    <h1>Administrar Películas</h1>
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#miModal"
-                            onclick="mostrarModal('Nuevo Producto', null)">Nuevo +
+                        onclick="mostrarModal('Nuevo Producto', null)">Nuevo +
                     </button>
                 </div>
             </div>
@@ -53,22 +55,25 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                            <form id="formularioProductos">
+                            <form id="formularioProductos" novalidate>
                                 <input type="hidden" id="codigo" name="codigo">
                                 <div class="mb-3">
                                     <label for="nombre" class="form-label">Nombre</label>
                                     <input type="text" class="form-control" id="nombre" name="nombre" minlength="2"
-                                        maxlength="50" required>
+                                        maxlength="50" is-invalid required>
+                                        <div class="invalid-feedback">Este campo es obligatorio. Ingrese un nombre (2-50 caracteres).</div>
                                 </div>
                                 <div class="mb-3">
                                     <label for="categoria" class="form-label">Categoría</label>
                                     <input type="text" class="form-control" id="categoria" name="categoria"
-                                        minlength="2" maxlength="50" required>
+                                        minlength="2" maxlength="50" is-invalid required>
+                                        <div class="invalid-feedback">Este campo es obligatorio. Seleccione una categoría.</div>
                                 </div>
                                 <div class="mb-3">
                                     <label for="descripcion" class="form-label">Descripción</label>
                                     <textarea id="descripcion" class="form-control" name="descripcion" minlength="2"
-                                        maxlength="200" required></textarea>
+                                        maxlength="200" is-invalid required></textarea>
+                                        <div class="invalid-feedback">Este campo es obligatorio. Ingrese una descripción (2-200 caracteres).</div>
                                 </div>
                                 <div class="mb-3 form-check">
                                     <label class="form-check-label" for="publicado">Publicado</label>
@@ -79,14 +84,16 @@
                                     <input type="checkbox" class="form-check-input" id="destacado" name="destacado">
                                 </div>
                                 <div class="mb-3">
-                                    <label for="imagen" class="form-label">Imagen URL</label>
+                                    <label for="imagen" class="form-label">Imagen (link)</label>
                                     <input type="text" class="form-control" id="imagen" name="imagen" minlength="2"
-                                        maxlength="200" required>
+                                        maxlength="200" is-invalid required>
+                                        <div class="invalid-feedback">Este campo es obligatorio. Ingrese un link de una imagen (2-200 caracteres).</div>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="url" class="form-label">URL</label>
+                                    <label for="url" class="form-label">Video (link)</label>
                                     <input type="text" class="form-control" id="url" name="url" minlength="2"
-                                        maxlength="200" required>
+                                        maxlength="200" is-invalid required>
+                                        <div class="invalid-feedback">Este campo es obligatorio. Ingrese un link de un video (2-200 caracteres).</div>
                                 </div>
                             </form>
                         </div>
@@ -106,6 +113,7 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/a7f4659b4f.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.3/dist/sweetalert2.all.min.js"></script>
     <script src="../js/administracion.js"></script>
 </body>
 
