--- a/html/categoria.html
+++ b/html/categoria.html
@@ -6,6 +6,12 @@
     <title>Categoría</title>
 </head>
 <body>
-    
+    <main>
+        <section id="peliculasPorCategoria">
+
+        </section>
+    </main>
+    <script src="../js/categoria.js"></script>
+    <script src="../js/exportPeliculas.js"></script>
 </body>
 </html>
