--- a/html/filtroDeBusqueda.html
+++ b/html/filtroDeBusqueda.html
@@ -15,16 +15,16 @@
               Categorías
             </button>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="categoria.html">Acción</a></li>
               <li><a class="dropdown-item" href="categoria.html">Animado</a></li>
-              <li><a class="dropdown-item" href="categoria.html">Aventura</a></li>
-              <li><a class="dropdown-item" href="categoria.html">Bélico</a></li>
+              <li><a class="dropdown-item" href="categoria.html">Acción y aventura</a></li>
+              <li><a class="dropdown-item" href="categoria.html">Ciencia Ficción</a></li>
               <li><a class="dropdown-item" href="categoria.html">Comedia</a></li>
               <li><a class="dropdown-item" href="categoria.html">Documental</a></li>
               <li><a class="dropdown-item" href="categoria.html">Drama</a></li>
               <li><a class="dropdown-item" href="categoria.html">Musical</a></li>
               <li><a class="dropdown-item" href="categoria.html">Misterio</a></li>
               <li><a class="dropdown-item" href="categoria.html">Terror</a></li>
+              <li><a class="dropdown-item" href="categoria.html">Romance</a></li>
             </ul>
           </div>
           <section id="peliculasPorCategoria">
@@ -33,7 +33,7 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="../js/filtroDeBusqueda.js"></script>
+    <script src="../js/filtro.js"></script>
     <script src="../js/exportPeliculas.js"></script>
 </body>
 </html>
