revisando detalles de categoria.js

--- a/html/filtroDeBusqueda.html
+++ b/html/filtroDeBusqueda.html
@@ -15,16 +15,16 @@
               Categorías
             </button>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="categoria.html">Animado</a></li>
-              <li><a class="dropdown-item" href="categoria.html">Acción y aventura</a></li>
-              <li><a class="dropdown-item" href="categoria.html">Ciencia Ficción</a></li>
-              <li><a class="dropdown-item" href="categoria.html">Comedia</a></li>
-              <li><a class="dropdown-item" href="categoria.html">Documental</a></li>
-              <li><a class="dropdown-item" href="categoria.html">Drama</a></li>
-              <li><a class="dropdown-item" href="categoria.html">Musical</a></li>
-              <li><a class="dropdown-item" href="categoria.html">Misterio</a></li>
-              <li><a class="dropdown-item" href="categoria.html">Terror</a></li>
-              <li><a class="dropdown-item" href="categoria.html">Romance</a></li>
+              <li><a class="dropdown-item">Animación</a></li>
+              <li><a class="dropdown-item">Acción y Aventura</a></li>
+              <li><a class="dropdown-item">Ciencia Ficción</a></li>
+              <li><a class="dropdown-item">Comedia</a></li>
+              <li><a class="dropdown-item">Documental</a></li>
+              <li><a class="dropdown-item">Drama</a></li>
+              <li><a class="dropdown-item">Musical</a></li>
+              <li><a class="dropdown-item">Misterio</a></li>
+              <li><a class="dropdown-item">Terror</a></li>
+              <li><a class="dropdown-item">Romance</a></li>
             </ul>
           </div>
           <section id="peliculasPorCategoria">
