--- a/html/filtroDeBusqueda.html
+++ b/html/filtroDeBusqueda.html
@@ -8,8 +8,17 @@
     <title>Filtro</title>
 </head>
 <body>
-    <main>
+    <main id="main">
         <h4>Prueba de filtro de busqueda y categoria</h4>
+        <header>
+            <nav class="navbar bg-body-tertiary" id="buscador">
+                <div class="container-fluid">
+                  <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit" id="btnBuscar">Search</button>
+                  </form>
+                </div>
+              </nav>
         <div class="dropdown">
             <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
               Categorías
@@ -27,12 +36,11 @@
               <li><a class="dropdown-item">Romance</a></li>
             </ul>
           </div>
-          <section id="peliculasPorCategoria">
-
-          </section>
+        </header>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="../js/buscador.js"></script>
     <script src="../js/filtro.js"></script>
     <script src="../js/exportPeliculas.js"></script>
 </body>
