--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
                 <div class="footer-col">
                     <h4>Explorar</h4>
                     <ul>
-                        <li><a href="#">Inicio</a></li>
-                        <li><a href="#">Películas</a></li>
-                        <li><a href="#">Series</a></li>
+                        <li><a href="/index.html">Inicio</a></li>
+                        <li><a href="/pages/peliculas.html">Películas</a></li>
+                        <li><a href="/pages/series.html">Series</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
