--- a/html/busqueda.html
+++ b/html/busqueda.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/estilo.css">
-    <title>Categoría</title>
+    <title>Resultados de la búsqueda</title>
 </head>
 <body>
     <main>
-        <section id="peliculasPorCategoria">
-           
+        <section id="sectionBusqueda">
+
         </section>
     </main>
-    <script src="../js/categoria.js"></script>
-    <script src="../js/exportPeliculas.js"></script>
+    
+    <script src="../js/busqueda.js"></script>
 </body>
 </html>
