--- a/html/filtroDeBusqueda.html
+++ b/html/filtroDeBusqueda.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilo.css">
+    <script src="https://kit.fontawesome.com/a7f4659b4f.js" crossorigin="anonymous"></script>
     <title>Filtro</title>
 </head>
 <body>
-    <main id="main">
-        <h4>Prueba de filtro de busqueda y categoria</h4>
+    <main>
         <header>
-            <nav class="navbar bg-body-tertiary" id="buscador">
+            <nav class="navbar bg-body-tertiary">
                 <div class="container-fluid">
-                  <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit" id="btnBuscar">Search</button>
+                  <form class="d-flex" role="search" id="formBuscador">
+                    <input id="buscador" class="form-control me-2" placeholder="Buscar película..." aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit" id="btnBuscar"><i class="fa-solid fa-magnifying-glass"></i></button>
                   </form>
                 </div>
               </nav>
