--- a/Html/login.html
+++ b/Html/login.html
@@ -20,25 +20,24 @@
     <div>
       <form class="container">
         <div id="containerLogin">
-          <div class="mb-3">
-            <div>
-              <h1 class="text-center my-3"> Logueate y empieza a disfrutar de tus <br> películas y series favoritas</h1>
+            <div class="mb-3">
+                <div>
+                    <h1 class="text-center my-3"> Logueate y empieza a disfrutar de tus <br> películas y series favoritas</h1>
+                </div>
+                <div>
+                    <label for="inputEmail" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="inputEmail" placeholder="mail@ejemplo.com" required aria-describedby="emailHelp">
+                </div>
+                <div>
+                    <label for="inputPassword" class="form-label">Contraseña</label>
+                    <input type="password" class="form-control" id="inputPassword" placeholder="********" minlength="8" maxlength="10" required>
+                </div>
+                <div class="botonLogeo">
+                  <button class="btn btn-primary" type="button" onclick="iniciarSesionPochloo()">Logearse</button>
+              </div>
             </div>
-            <div>
-              <label for="inputEmail" class="form-label">Email</label>
-              <input type="email" class="form-control" id="inputEmail" placeholder="mail@ejemplo.com" required>
-            </div>
-            <div>
-              <label for="inputPassword" class="form-label">Contraseña</label>
-              <input type="password" class="form-control" id="inputPassword" placeholder="********" minlength="8"
-                maxlength="10" required>
-            </div>
-            <div class="botonLogeo">
-              <button class="btn btn-primary" type="button" onclick="iniciarSesionPochloo()">Logearse</button>
-            </div>
-          </div>
         </div>
-      </form>
+    </form>
 
 
       <div class="my-3 sinCuenta">
