Funcionalidad de detalle de pelicula terminado, falta el estilo

--- a/html/detallePelicula.html
+++ b/html/detallePelicula.html
@@ -17,7 +17,9 @@
 
 <body>
     <main>
+        <section id="detallePeli">
 
+        </section>
     </main>
 
     <!-- Script JS -->
@@ -25,6 +27,7 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/a7f4659b4f.js" crossorigin="anonymous"></script>
+    <script src="../js/detallePelicula.js"></script>
 </body>
 
 </html>
