--- a/Html/recupero.html
+++ b/Html/recupero.html
@@ -19,7 +19,7 @@
         <div class="containerSecundario">
             <form class="containerForm">
                 <div class="mb-3 text-center">
-                    <label for="InputEmail" class="form-label">Para recuperar tu contraseña,<br>escribe tu email
+                    <label for="InputEmail" class="form-label" style="color: azure;">Para recuperar tu contraseña,<br>escribe tu email
                         aquí<br>y sigue las instrucciones</label>
                     <input type="email" class="form-control inputRecuperar" id="InputEmail" aria-describedby="emailHelp"
                         placeholder="mail@ejemplo.com">
