--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Croissant+One&family=Outfit:wght@100&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;900&display=swap');
       </style>
 </head>
 <body>
@@ -98,25 +99,25 @@
                 <div class="footer-col">
                     <h4>Términos de Uso</h4>
                     <ul>
-                        <li><a href="#">Privacidad</a></li>
-                        <li><a href="#">Planes</a></li>
-                        <li><a href="#">Formas de Pago</a></li>
+                        <li><a href="./pages/terminosUso/privacidad.html">Privacidad</a></li>
+                        <li><a href="./pages/terminosUso/planes.html">Planes</a></li>
+                        <li><a href="./pages/terminosUso/planes.html">Formas de Pago</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
                     <h4>Anuncios</h4>
                     <ul>
-                        <li><a href="#">Estrenos</a></li>
-                        <li><a href="#">Blogs</a></li>
-                        <li><a href="#">Pre Estrenos</a></li>
+                        <li><a href="./pages/anuncios/estrenos.html">Estrenos</a></li>
+                        <li><a href="./pages/anuncios/blogs.html">Blogs</a></li>
+                        <li><a href="./pages/anuncios/preEstrenos.html">Pre Estrenos</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
                  <h4>Ayuda</h4>
                  <ul>
-                     <li><a href="#">Contacto</a></li>
-                     <li><a href="#">Sobre Nosotros</a></li>
-                     <li><a href="#">Consultas</a></li>
+                     <li><a href="./pages/ayuda/contacto.html">Contacto</a></li>
+                     <li><a href="./pages/ayuda/nosotros.html">Sobre Nosotros</a></li>
+                     <li><a href="./pages/ayuda/consultas.html">Consultas</a></li>
                  </ul>
              </div>
                 <div class="footer-col">
