Optimizando código: Se fusionaron dos archivos javascript

--- a/html/categoria.html
+++ b/html/categoria.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <section id="peliculasPorCategoria">
+        <section id="sectionFiltros">
            
         </section>
     </main>
