--- a/html/filtroDeBusqueda.html
+++ b/html/filtroDeBusqueda.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <main>
-        <header>
-            <nav class="navbar bg-body-tertiary">
+        <header class="d-flex flex-row justify-content-center">
+            <nav class="navbar bg-body-tertiary ">
                 <div class="container-fluid">
                   <form class="d-flex" role="search" id="formBuscador">
                     <input id="buscador" class="form-control me-2" placeholder="Buscar película..." aria-label="Search">
@@ -41,7 +41,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="../js/buscador.js"></script>
-    <script src="../js/filtro.js"></script>
+    <script src="../js/categoria.js"></script>
     <script src="../js/exportPeliculas.js"></script>
 </body>
 </html>
