--- a/index.html
+++ b/index.html
@@ -99,25 +99,25 @@
                 <div class="footer-col">
                     <h4>Términos de Uso</h4>
                     <ul>
-                        <li><a href="./pages/terminosUso/privacidad.html">Privacidad</a></li>
-                        <li><a href="./pages/terminosUso/planes.html">Planes</a></li>
-                        <li><a href="./pages/terminosUso/planes.html">Formas de Pago</a></li>
+                        <li><a href="./pages/error404.html" target="_blank">Privacidad</a></li>
+                        <li><a href="./pages/error404.html" target="_blank" >Planes</a></li>
+                        <li><a href="./pages/error404.html" target="_blank" >Formas de Pago</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
                     <h4>Anuncios</h4>
                     <ul>
-                        <li><a href="./pages/anuncios/estrenos.html">Estrenos</a></li>
-                        <li><a href="./pages/anuncios/blogs.html">Blogs</a></li>
-                        <li><a href="./pages/anuncios/preEstrenos.html">Pre Estrenos</a></li>
+                        <li><a href="./pages/error404.html" target="_blank">Estrenos</a></li>
+                        <li><a href="./pages/error404.html" target="_blank">Blogs</a></li>
+                        <li><a href="./pages/error404.html" target="_blank">Pre Estrenos</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
                  <h4>Ayuda</h4>
                  <ul>
-                     <li><a href="./pages/ayuda/contacto.html">Contacto</a></li>
-                     <li><a href="./pages/ayuda/nosotros.html">Sobre Nosotros</a></li>
-                     <li><a href="./pages/ayuda/consultas.html">Consultas</a></li>
+                     <li><a href="./pages/error404.html" target="_blank">Contacto</a></li>
+                     <li><a href="./pages/error404.html" target="_blank">Sobre Nosotros</a></li>
+                     <li><a href="./pages/error404.html" target="_blank">Consultas</a></li>
                  </ul>
              </div>
                 <div class="footer-col">
