login responsive arreglado

--- a/Html/login.html
+++ b/Html/login.html
@@ -18,12 +18,12 @@
       <img src="../img/Pochloo_Logo.png" alt="Logo con fondo" class="logoP">
     </div>
     <div>
-      <form class="container">
+      <form class="container" id="loginForm">
         <div id="containerLogin">
             <div class="mb-3">
-                <div>
-                    <h1 class="text-center my-3"> Logueate y empieza a disfrutar de tus <br> películas y series favoritas</h1>
-                </div>
+              <div>
+                <h1 class="text-center my-3 textoLogin"> Logueate y empieza a disfrutar de tus <br> películas y series favoritas</h1>
+            </div>
                 <div>
                     <label for="inputEmail" class="form-label">Email</label>
                     <input type="email" class="form-control" id="inputEmail" placeholder="mail@ejemplo.com" required aria-describedby="emailHelp">
