Terminado, falta mejorar esteticamente

--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 <body>
 
     <main>
-        <h1 class="portada p-4 pt-0 mb-0"></h1>
+        <div id ="peliculaDestacada" class="container-fluid p-0">
+            <div class="datosPeliculaDestacada d-flex h-100 justify-content-center flex-column ps-2 pt-5">
+                <h1 id="nombrePeliculaDestacada"></h1>
+                <p id="descripcionPeliculaDestacada"></p>
+                <button type="button" id="reproducirPeliculaDestacada" class="btn btn-primary btn-sm"><i class="fas fa-play pe-1" style="color: #872340;"></i>REPRODUCIR</button>
+            </div>
+        </div>
+        
         
         <div id="categoria" class="container-fluid h-50 categoria p-4 color-main">
 
@@ -20,7 +27,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js"></script>
+    <script src="https://kit.fontawesome.com/f8271ebcd6.js" crossorigin="anonymous"></script>
     <script src="js/index.js"></script>
+    <script src="js/exportPeliculas.js"></script>
 </body>
 </html>
