Filtro por categoría y buscador listos. Falta optimizar la escritura del código

--- a/html/categoria.html
+++ b/html/categoria.html
@@ -13,7 +13,7 @@
            
         </section>
     </main>
-    <script src="../js/categoria.js"></script>
+    <script src="../js/filtro.js"></script>
     <script src="../js/exportPeliculas.js"></script>
 </body>
 </html>
