--- a/index.html
+++ b/index.html
@@ -19,15 +19,13 @@
         <div class="logo">
             <img src="../imgTemporal/PochlooLOGO.png" alt="Logo de la marca">
         </div>
-        <nav>
-           <ul class="nav-links">
-                <li><a href="./login.html">Ingresa</a></li>
-           </ul>            
-        </nav>
-        <a class="btn" href="./registro.html"><button>Suscribete ahora</button></a>
+        
+          <a class="btn" href="./index.html"><button>Ingresa</button></a> 
+          <a class="btn" href="./pages/registro.html"><button>Suscribete ahora</button></a>
     </header>
 
     <main>
+
         <!--Inicio del cuerpo login-->
         <div class="containerMadre">
             <div class="containerImagen">
@@ -38,7 +36,7 @@
                 <div id="containerLogin">
                   <div class="mb-3">
                     <div>
-                      <h1 class="text-center my-3"> Ingresa y empieza a disfrutar de tus <br> películas y series favoritas</h1>
+                      <h1 class="text-center my-3">Ingresá y descubrí un mundo de entretenimiento en Pochloo Movies</h1>
                     </div>
                     <div>
                       <label for="exampleFormControlInput1" class="form-label">Email</label>
