--- a/Html/recupero.html
+++ b/Html/recupero.html
@@ -12,6 +12,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Croissant+One&family=Outfit:wght@100&display=swap');
     </style>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
 </head>
 
 <body>
