--- a/pages/error404.html
+++ b/pages/error404.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="/imgTemporal/Error 404.png" alt=""> 
+    <img src="/img/Error404.png" alt=""> 
     <h1>Oops! Página no encontrada</h1>
     
     <div class = "boton">
