--- a/index.html
+++ b/index.html
@@ -17,11 +17,8 @@
 <body>
     <header class="header">
         <div class="logo">
-            <img src="../imgTemporal/PochlooLOGO.png" alt="Logo de la marca">
+            <img src="./img/PochlooLOGO.png" alt="Logo de la marca">
         </div>
-        
-          <a class="btn" href="./index.html"><button>Ingresa</button></a> 
-          <a class="btn" href="./pages/registro.html"><button>Suscribete ahora</button></a>
     </header>
 
     <main>
@@ -29,7 +26,7 @@
         <!--Inicio del cuerpo login-->
         <div class="containerMadre">
             <div class="containerImagen">
-              <img src="../imgTemporal/PochlooLOGO.png" alt="Logo con fondo" class="logoP">
+              <img src="./img/PochlooLOGO.png" alt="Logo con fondo" class="logoP">
             </div>
             <div>
               <form class="container">
@@ -114,7 +111,7 @@
                  <h4>Ayuda</h4>
                  <ul>
                      <li><a href="./pages/error404.html" target="_blank">Contacto</a></li>
-                     <li><a href="./pages/error404.html" target="_blank">Sobre Nosotros</a></li>
+                     <li><a href="./pages/Nosotros.html" target="_blank">Sobre Nosotros</a></li>
                      <li><a href="./pages/error404.html" target="_blank">Consultas</a></li>
                  </ul>
              </div>
