cambios en proceso

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <ul>
                         <li><a href="/index.html">Inicio</a></li>
                         <li><a href="/pages/peliculas.html">Películas</a></li>
-                        <li><a href="/pages/series.html">Series</a></li>
+                        <li><a href="/pages/error404.html">Series</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
