terminando portadas y logos y mejora estetica

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <main>
         <div id ="peliculaDestacada" class="container-fluid p-0">
             
-            <div class="datosPeliculaDestacada d-flex h-100 justify-content-center flex-column ps-2 pt-5">
-                <h1 id="nombrePeliculaDestacada"></h1>
+            <div id ="datosPeliculaDestacada" class="datosPeliculaDestacada d-flex h-100 justify-content-center flex-column ps-2 pt-2">
+                <!-- <h1 id="nombrePeliculaDestacada"></h1> -->
+                <img id="logoDestacado" class="pb-4" src="" alt="">
                 <p id="descripcionPeliculaDestacada"></p>
                 <button type="button" id="reproducirPeliculaDestacada" class="btn btn-primary btn-sm"><i class="fas fa-play pe-1" style="color: #872340;"></i>REPRODUCIR</button>
             </div>
