Rama mergeada + corrigiendo conflictos

--- a/Html/recupero.html
+++ b/Html/recupero.html
@@ -12,6 +12,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Croissant+One&family=Outfit:wght@100&display=swap');
     </style>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
 </head>
 
 <body>
@@ -25,7 +26,7 @@
                     <input type="email" class="form-control inputRecuperar" id="InputEmail" aria-describedby="emailHelp"
                         placeholder="mail@ejemplo.com">
                 </div>
-                <button type="button" class="btn btn-primary botonRecuperar" onclick="verificarUsuario()">Submit</button>
+                <button type="button" class="btn btn-primary botonRecuperar" onclick="verificarUsuario()">Enviar</button>
             </form>
         </div>
     </div>
