--- a/Html/login.html
+++ b/Html/login.html
@@ -30,10 +30,10 @@
                 </div>
                 <div>
                     <label for="inputPassword" class="form-label">Contraseña</label>
-                    <input type="password" class="form-control" id="inputPassword" placeholder="********" minlength="8" maxlength="10" required>
+                    <input type="password" class="form-control" id="inputPassword"  required>
                 </div>
-                <div class="botonLogeo">
-                  <button class="btn btn-primary" type="button" onclick="iniciarSesionPochloo()">Logearse</button>
+                <div id="botonLogeo">
+                  <button class="btn btn-primary" type="button">Logearse</button>
               </div>
             </div>
         </div>
@@ -68,7 +68,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="../Js/login.js"></script>
+    <script src="../Js/login.js" type="module"></script>
+    <script src="../Js/exportUsuario.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 </body>
