--- a/Html/login.html
+++ b/Html/login.html
@@ -54,6 +54,10 @@
                 </a>
               </span>
               </div>
+              <div>
+                <a href="../Html/admin.html">admin</a>
+                
+              </div>
 
             </div>
 
