--- a/Html/registro.html
+++ b/Html/registro.html
@@ -37,6 +37,10 @@
                 <div class="containerButton">
                     <button type="submit" class="btn btn-primary" id="botonDeRegistro">Registrarme!</button>
                 </div>
+                <div>
+                    <a href="../Html/login.html">login</a>
+                    <a href="../Html/admin.html">Admin</a>
+                </div>
             </form>
         </div>
     </div>
