--- a/html/admin.html
+++ b/html/admin.html
@@ -148,6 +148,10 @@
                     </tbody>
                 </table>
             </div>
+            <div>
+                <a href="../Html/login.html"></a>
+                <a href="../Html/registro.html"></a>
+            </div>
         </section>
     </main>
 
