Corrección de botón para loguearse

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,7 +33,7 @@
                     <input type="password" class="form-control" id="inputPassword"  required>
                 </div>
                 <div id="botonLogeo">
-                  <button class="btn btn-primary" type="button">Logearse</button>
+                  <button class="btn btn-primary" type="button">Loguearse</button>
               </div>
             </div>
         </div>
@@ -41,9 +41,9 @@
 
 
       <div class="my-3 sinCuenta">
-        <div style="color: white;">No tenes cuenta? Registrate aquí:
+        <div style="color: white;">¿No tenes cuenta? Registrate aquí:
           <div class="botonAbrir">
-            <a href="html/registro.html">Registrarme!</a>
+            <a href="html/registro.html">Registrarme</a>
           </div>
 
           <div class="recuperarContraseña">
@@ -53,10 +53,6 @@
                   Olvidé mi contraseña
                 </a>
               </span>
-              </div>
-              <div>
-                <a href="html/admin.html">admin</a>
-                
               </div>
 
             </div>
