Navbar arreglado. Falta arreglar footer en el inicio.html

--- a/html/inicio.html
+++ b/html/inicio.html
@@ -47,10 +47,10 @@
             </ul>
             <ul class="navbar-nav mb-2 mb-lg-0">
                 <li class="nav-item">
-                <a class="nav-link">Cerrar Sesión</a>
+                <a class="nav-link" id="sesionLink" href="../index.html">Cerrar Sesión</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link">Administración</a>
+                <a class="nav-link" id="adminLink" href="admin.html">Administración</a>
               </li>
             </ul>
             
@@ -80,42 +80,41 @@
         </div>
     </main>
 
-    <!--FOOTER INICIO-->
     <footer class="footer">
         <div class="container">
             <div class="row">
                 <div class="footer-col">
                     <h4>Explorar</h4>
                     <ul>
-                        <li><a href="./index.html">Inicio</a></li>
-                        <li><a href="error404.html">Películas</a></li>
-                        <li><a href="error404.html">Series</a></li>
+                        <li><a href="#">Inicio</a></li>
+                        <li><a href="error404.html" target="_blank">Películas</a></li>
+                        <li><a href="error404.html" target="_blank">Series</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
                     <h4>Términos de Uso</h4>
                     <ul>
-                        <li><a href="error404.html">Privacidad</a></li>
-                        <li><a href="error404.html">Planes</a></li>
-                        <li><a href="error404.html">Formas de Pago</a></li>
+                        <li><a href="error404.html" target="_blank">Privacidad</a></li>
+                        <li><a href="error404.html" target="_blank" >Planes</a></li>
+                        <li><a href="error404.html" target="_blank" >Formas de Pago</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
                     <h4>Anuncios</h4>
                     <ul>
-                        <li><a href="error404.html">Estrenos</a></li>
-                        <li><a href="error404.html">Blogs</a></li>
-                        <li><a href="error404.html">Pre Estrenos</a></li>
+                        <li><a href="error404.html" target="_blank">Estrenos</a></li>
+                        <li><a href="error404.html" target="_blank">Blogs</a></li>
+                        <li><a href="error404.html" target="_blank">Pre Estrenos</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
-                    <h4>Ayuda</h4>
-                    <ul>
-                        <li><a href="contacto.html">Contacto</a></li>
-                        <li><a href="Nosotros.html">Sobre Nosotros</a></li>
-                        <li><a href="error404.html">Consultas</a></li>
-                    </ul>
-                </div>
+                 <h4>Ayuda</h4>
+                 <ul>
+                     <li><a href="error404.html" target="_blank">Contacto</a></li>
+                     <li><a href="Nosotros.html" target="_blank">Sobre Nosotros</a></li>
+                     <li><a href="error404.html" target="_blank">Consultas</a></li>
+                 </ul>
+             </div>
                 <div class="footer-col">
                     <br>
                     <h4>Siguenos</h4>
@@ -128,7 +127,8 @@
                 </div>
             </div>
         </div>
-    </footer>
+   </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
@@ -140,6 +140,9 @@
     <script src="../js/exportPeliculas.js"></script>
     <script src="../js/buscador.js"></script>
     <script src="../js/categoria.js"></script>
+    <script src="../js/header.js"></script>
+
+    
 </body>
 
 </html>
