fallo de publicado solucionado y se agrego dos atributos a la clase producto

--- a/html/admin.html
+++ b/html/admin.html
@@ -153,6 +153,20 @@
                                     <input type="checkbox" class="form-check-input" id="destacado" name="destacado">
                                 </div>
                                 <div class="mb-3">
+                                    <label for="imagenDestacado" class="form-label">Imagen Destacado(link)</label>
+                                    <input type="text" class="form-control" id="imagenDestacado" name="imagenDestacado" minlength="2"
+                                        maxlength="200" is-invalid required>
+                                    <div class="invalid-feedback">Este campo es obligatorio. Ingrese un link de una
+                                        imagen (2-200 caracteres).</div>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="logo" class="form-label">Logo (link)</label>
+                                    <input type="text" class="form-control" id="logo" name="logo" minlength="2"
+                                        maxlength="200" is-invalid required>
+                                    <div class="invalid-feedback">Este campo es obligatorio. Ingrese un link de una
+                                        imagen (2-200 caracteres).</div>
+                                </div>
+                                <div class="mb-3">
                                     <label for="imagen" class="form-label">Imagen (link)</label>
                                     <input type="text" class="form-control" id="imagen" name="imagen" minlength="2"
                                         maxlength="200" is-invalid required>
