fixed recuperar contraseña

--- a/html/inicio.html
+++ b/html/inicio.html
@@ -85,7 +85,7 @@
                     <h4>Explorar</h4>
                     <ul>
                         <li><a href="#">Inicio</a></li>
-                        <li><a href="peliculas.html">Películas</a></li>
+                        <li><a href="error404.html">Películas</a></li>
                         <li><a href="error404.html">Series</a></li>
                     </ul>
                 </div>
